# CMake-admin

./: .gitignore  README.rst  build.py  cmake_call_tree.py  cmake_json_trace.py
examples/simple/src/: CMakeLists.txt
examples/simple/src/subdirA/: CMakeLists.txt
examples/simple/src/subdirC/: CMakeLists.txt
examples/simple1/src/: CMakeLists.txt  functions.cmake
examples/simple1/src/subdirA/: CMakeLists.txt
examples/simple1/src/subdirB/: CMakeLists.txt
